Address review feedback: fix spelling, checkpoint format, DawScope refs, journal/FX thread clarity
Agent-Logs-Url: https://github.com/Ben-Esquivel-Music/java-digital-audio-workstation/sessions/f8785bba-8565-4380-90c0-4314842f20df

Co-authored-by: BenEsquivelMusic <198515647+BenEsquivelMusic@users.noreply.github.com>